remplacement des linkedlist par des array et methode getfirst par get(0)